force-app/main/default/objects/numm__PrePayment__c/numm__PrePayment__c.object-meta.xml
<CustomObject>
    <description>Enregistrement des éléments de paiement en attente de comptabilisation</description>
    <label>Pré Reglement</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Pré Reglement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pré Reglements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>