force-app/main/default/objects/numm__PrePayment__c/fields/numm__Amount__c.field-meta.xml
<CustomField>
    <fullName>numm__Amount__c</fullName>
    <inlineHelpText>Saisir le montant en attente de règlement</inlineHelpText>
    <label>Montant</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>