force-app/main/default/objects/numm__PrePayment__c/fields/numm__Commentaires__c.field-meta.xml
<CustomField>
    <fullName>numm__Commentaires__c</fullName>
    <label>Commentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>