force-app/main/default/objects/numm__PrePayment__c/fields/numm__HeaderVoucher__c.field-meta.xml
<CustomField>
    <fullName>numm__HeaderVoucher__c</fullName>
    <label>Pièce Entête</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipName>PreReglements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>