force-app/main/default/objects/numm__PrePayment__c/fields/numm__IdSettlementMethod__c.field-meta.xml
<CustomField>
    <fullName>numm__IdSettlementMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Mode de règlement en attente de comptabilisation</inlineHelpText>
    <label>Mode de reglement</label>
    <referenceTo>numm__SettlMethod__c</referenceTo>
    <relationshipName>PreReglements</relationshipName>
    <type>Lookup</type>
</CustomField>